--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build":"npm i",
+    "start" :"node .",
+    "start:dev" :"nodemon ."
   },
   "keywords": [],
   "author": "",
